--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
-Theme Name:       Theme for CLIENT NAME
-Theme URI:        http://www.xxxxxxx.com/
+Theme Name:       Theme for Josephakins
+Theme URI:        http://www.josephakins.com/
 Description:      12SM Base Theme
 Author:           12South Music
 Author URI:       http://12southmusic.com/
