.home-banner styles

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -10,6 +10,16 @@
 body { }
 
 
+/* ==========================================================================
+   Home
+   ========================================================================== */
+
+.home-banner {
+padding-bottom: 25%;
+background-size: contain;
+background-repeat: no-repeat;
+background-position: center;
+}
 
 /* ==========================================================================
    Header
