remove navbar-brand through css

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -20,7 +20,9 @@ background-size: contain;
 background-repeat: no-repeat;
 background-position: center;
 }
-
+.navbar-brand{
+   display: none!important;
+}
 /* ==========================================================================
    Header
    ========================================================================== */
