--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -30,9 +30,10 @@ background-position: center;
 .owl-theme .owl-controls {
 text-align: center;
 position: absolute;
-top: 35%;
+top: 50%;
 width: 100%;
 height: 0px;
+color: #fff!important;
 }
 
 /* ==========================================================================
