--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -151,6 +151,9 @@ display: none;
 .smaller{
    font-size: 36px;
 }
+.main{
+   background: #FFF;
+}
 /* ==========================================================================
    Posts
    ========================================================================== */
