--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -8,7 +8,7 @@
    ========================================================================== */
 
 body { }
-
+.col {margin:0 1%;}
 
 /* ==========================================================================
    Home
