media queries and such

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -56,7 +56,9 @@ color: #fff!important;
    Primary Content
    ========================================================================== */
 
-.main { }
+.main{
+   background: #FFF;
+}
 
 /* Gallery Shortcode */
 .gallery-row { padding: 15px 0; }
@@ -151,9 +153,7 @@ display: none;
 .smaller{
    font-size: 36px;
 }
-.main{
-   background: #FFF;
-}
+
 /* ==========================================================================
    Posts
    ========================================================================== */
@@ -198,10 +198,13 @@ figure.alignnone { margin-left: 0; margin-right: 0; }
 /* No media query since this is the default in Bootstrap */
 
 /* Small devices (tablets, 768px and up) */
-@media (min-width: @screen-sm) { }
+@media (min-width: 768px) {
+.col,
+.post-nav {margin:0 10%;}
+ }
 
 /* Medium devices (desktops, 992px and up) */
-@media (min-width: @screen-md) { }
+@media (min-width: 992px) { }
 
 /* Large devices (large desktops, 1200px and up) */
-@media (min-width: @screen-lg) { }
+@media (min-width: 1200px) { }
