--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -10,6 +10,9 @@
 body { }
 .col {margin:0 1%;}
 
+.wrap .container-fluid{
+   background: url(../img/field-bg.jpg) no-repat cover;
+}
 /* ==========================================================================
    Home
    ========================================================================== */
