--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -15,6 +15,9 @@ body { }
    background-position: bottom;
    background-size: cover;
 }
+body.home > header {
+margin-bottom: 0px;
+}
 /* ==========================================================================
    Home
    ========================================================================== */
@@ -63,6 +66,7 @@ color: #fff!important;
 
 .main{
    background: #FFF;
+   padding-top: 2%;
 }
 
 /* Gallery Shortcode */
