store header backgroud color

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -58,7 +58,12 @@ color: #fff!important;
 
 .content { }
 
-
+/* ==========================================================================
+   Store
+   ========================================================================== */
+.store-table-header{
+   background-color: #0B5D6B;
+}
 
 /* ==========================================================================
    Primary Content
