--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -63,11 +63,14 @@ color: #fff!important;
    ========================================================================== */
 .store-table-header{
    background-color: #0B5D6B;
+   margin: 0 1%;
 }
 .store-table-header h3{
    color: #fff;
 }
-
+.store-row{
+   margin-top: 15px;
+}
 /* ==========================================================================
    Primary Content
    ========================================================================== */
