--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -18,6 +18,9 @@ body { }
 body.home > header {
 margin-bottom: 0px;
 }
+h3{
+   font-size: 16px;
+}
 /* ==========================================================================
    Home
    ========================================================================== */
