--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -72,7 +72,7 @@ color: #fff!important;
    color: #fff;
 }
 .store-row{
-   margin-top: 15px;
+   margin: 15px 1%;
 }
 /* ==========================================================================
    Primary Content
