--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -19,6 +19,9 @@ body.home > header {
 margin-bottom: 0px;
 }
 h3{
+   font-size: 18px;
+}
+h4{
    font-size: 14px;
 }
 /* ==========================================================================
