--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -52,9 +52,12 @@ h4 {
 
 .navbar-default {
 background-color: #988d71!important;
-background-image: url(../img/nav-bg.jpg) repeat-x!important;
-border-color: #988d71!important;
-height:25px!important;
+background-image: url(../img/nav-bg.jpg)!important;
+border-color: #B4B1A9!important;
+height: 25px!important;
+-webkit-box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.25);
+-moz-box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.25);
+box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.25);
 }
 
 /* ==========================================================================
