--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -21,7 +21,6 @@ body.home > header {
 margin-bottom: 0px;
 }
 
-<<<<<<< HEAD
 h1{color:#A57513;}
 
 .feat-music {font-size:36px;
@@ -29,11 +28,7 @@ h1{color:#A57513;}
     font-family: Georgia;
     color:#3a5b13
 }
-=======
-h1 {color:#A57513;}
 
-h2 {color:#A57513;}
->>>>>>> FETCH_HEAD
 h3{
    font-size: 18px;
 }
@@ -58,6 +53,15 @@ height: 25px!important;
 -webkit-box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.25);
 -moz-box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.25);
 box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.25);
+}
+
+.navbar-default .navbar-nav>li>a {
+font-family: "baltica-web-extra-condensed"!important;
+color: #3e403d!important;
+}
+
+.navbar-default .navbar-nav>li>a:hover {
+color: #3a5b13!important;
 }
 
 /* ==========================================================================
