--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -6,7 +6,7 @@
 /* ==========================================================================
    Base
    ========================================================================== */
-
+/*I'm afraid of Commitment*/
 body { }
 
 .col {margin:0 1%;}
