--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -6,7 +6,6 @@
 /* ==========================================================================
    Base
    ========================================================================== */
-/*I'm afraid of Commitment*/
 body { }
 
 .col {margin:0 1%;}
@@ -20,8 +19,8 @@ body { }
 body.home > header {
 margin-bottom: 0px;
 }
-
-h1{color:#A57513;}
+/*#A57513*/
+h1{color:#fff;}
 
 .feat-music {font-size:36px;
     letter-spacing: 1px;
