--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -148,6 +148,12 @@ color: #fff!important;
 .store-row{
    margin: 15px 1%;
 }
+.store-buy{
+   text-align: center;
+}
+.title{
+   font-size: 10px;
+}
 /* ==========================================================================
    Primary Content
    ========================================================================== */
