Music Carousel Text Styling

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -54,6 +54,14 @@ h4 {
    }
 
 
+/*==========================================================================
+  Bottom Slider Text
+ ========================================================================== */
+
+.music-carousel-item>h3 {
+    color:#a67514;
+    font-family: "Georgia";
+}
 
 
 
