--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -188,7 +188,7 @@ color: #fff!important;
    ========================================================================== */
 
 .main{
-   background: #FFF;
+   background: #f7f7f3;
    padding-top: 2%;
 }
 
