Menu styling at mobileaaaaahhh it's a hand monster!!

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -124,6 +124,12 @@ background-repeat: no-repeat;
 background-position: center center;
 }
 
+.container>.navbar-header, .container-fluid>.navbar-header, .container>.navbar-collapse, .container-fluid>.navbar-collapse {
+background-color: #988d71!important;
+background-image: url(../img/nav-bg.jpg)!important;
+text-align:center!important;
+}
+
 /* ==========================================================================
    Home
    ========================================================================== */
