--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -273,6 +273,10 @@ padding: 3px;
 .preview-container>* {
 font-size: 11px;
 }
+
+.sm2_link>i{
+  font-size: 1.5em!important;
+}
 /* ==========================================================================
    Primary Content
    ========================================================================== */
