--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -274,7 +274,7 @@ padding: 3px;
 font-size: 11px;
 }
 
-.sm2_link>i{
+.preview-link>i{
   font-size: 1.5em!important;
 }
 /* ==========================================================================
