--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -418,6 +418,7 @@ background-color:#FFF;
 height: 0px;
 background-position: center center!important;
 padding-bottom: 75%;
+background-image: url(../assets/img/blog-default.jpg);
 }
 
 /* ==========================================================================
