--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -55,6 +55,9 @@ h4 {
    font-size: 14px;
    }
 
+a{
+  color: #A57513;
+}
 
 /*==========================================================================
   Bottom Slider Text
