hide the addthis counter

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -408,6 +408,9 @@ display: none;
 float: right;
 width: 70%;
 }
+.addthis_counter{
+  display: none!important;
+}
 
 .meta-date-share {
 padding: 1%;  
