--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -433,6 +433,7 @@ background-size: cover;
 background-color: #FFF;
 padding-top: 1%;
 border: 1px solid rgb(238, 238, 238);
+padding: 2%;
 }
 
 .individual-post .wp-post-image {display:none;}
