--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -170,6 +170,9 @@ height: 0px;
 color: #fff!important;
 }
 
+h4.featured{
+  color: #E99800;
+}
 /* ==========================================================================
    Header
    ========================================================================== */
