--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -172,6 +172,7 @@ color: #fff!important;
 
 h4.featured{
   color: #E99800;
+  font-weight: bold;
 }
 /* ==========================================================================
    Header
