--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -174,6 +174,32 @@ h4.featured{
   color: #E99800;
   font-weight: bold;
 }
+
+/* Audio Player*/
+.audiojs .scrubber {
+position: relative;
+float: left;
+width: 47%;
+background: #5a5a5a;
+height: 14px;
+margin: 10px;
+border-top: 1px solid #3f3f3f;
+border-left: 0px;
+border-bottom: 0px;
+overflow: hidden;
+}
+
+.audiojs{
+  background-color: rgba(0,0,0,0)!important;
+  background-image: none!important
+}
+.audiojs .loaded{
+  background-color: rgba(0,0,0,0)!important;
+  background-image: none!important
+}
+.audiojs .progress{
+  color: #eeeeee;
+}
 /* ==========================================================================
    Header
    ========================================================================== */
