--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -193,7 +193,7 @@ overflow: hidden;
 }
 .scrubber{
   background-color: rgba(0,0,0,0)!important;
-  border: 1px solid #000!important;
+  border: 1px solid #D8D8D8!important;
 }
 .audiojs{
   background-color: rgba(0,0,0,0)!important;
