Aligning Nav-Bar

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -94,6 +94,7 @@ color: #3e403d!important;
 font-size: 20px!important;
 text-transform: uppercase!important;
 letter-spacing: .2em!important;
+margin-left: 141px;
 }
 
 .navbar-default .navbar-nav>li>a:hover {
