Correcting Nav Text Color

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -94,7 +94,7 @@ margin-left: 141px;
 
 .navbar-default .navbar-nav>li>a {
 font-family: "baltica-web-extra-condensed"!important;
-color: #3e403d!important;
+color: #53534C!important;
 font-size: 20px!important;
 text-transform: uppercase!important;
 letter-spacing: .2em!important;
