adjust play pause icon size

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -226,6 +226,7 @@ font-weight: normal;
 line-height: 1;
 -webkit-font-smoothing: antialiased;
 -moz-osx-font-smoothing: grayscale;
+font-size: 1.3em;
 }
 p.play{
   content: "\f04b";
