Left Align Bottom

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -68,7 +68,7 @@ a{
 .music-carousel-item>h3 {
     color:#a67514;
     font-family: "Georgia";
-    text-align: center;
+    text-align: left;
 }
 
 
