--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -220,7 +220,7 @@ overflow: hidden;
   color: #000!important;
 }
 
-/*.play-pause>p{
+.play-pause>p{
   display: inline-block;
 font-family: FontAwesome;
 font-style: normal;
@@ -247,7 +247,7 @@ p.pause:before{
   top: 5px;
   left: 5px;
   position: relative;
-}*/
+}
 
 /* ==========================================================================
    Header
