--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -26,7 +26,9 @@ body.home > header {
   Header
   ===================================================================== */
 
-h1{color:#A57513;}
+h1 {color:#A57513;
+    font-family:"Georgia"
+}
 
 .feat-music {
     font-size:50px;
@@ -55,7 +57,8 @@ h3{
 
 h4 {
    font-size: 14px;
-   color:#ffffff
+   color:#ffffff;
+    font-family: "Georgia";
    }
 
 a{
