--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -384,6 +384,20 @@ color:#045F6B
 .preview-link>i{
   font-size: 1.5em!important;
 }
+ a.button .add_to_cart_button {font-size: 100%;
+              margin:0px;
+              line-height:1em;
+              Font-family: "Georgia"!important; 
+              text-decoration: none; 
+              overflow:visible;
+              padding:6px 10px; 
+              left: auto;
+              color: #045F6B!important;
+              background:#E1DED5!important;
+              white-space: nowrap; 
+              display: inline-block; 
+}
+
 /* ==========================================================================
    Primary Content
    ========================================================================== */
@@ -596,17 +610,4 @@ nav{
 /* Large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) { }
 
-<<<<<<< HEAD
-.woocommerce a.button {font-size: 100%;
-              margin:0px;
-              line-height:1em;
-              Font-family: "Georgia"!important; 
-              text-decoration: none; 
-              overflow:visible;
-              padding:6px 10px; 
-              left: auto;
-              color: #045F6B!important;
-              background:#E1DED5!important;
-              white-space: nowrap; 
-              display: inline-block; 
-}
+
