--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -259,7 +259,10 @@ p.pause:before{
 .bio-home{
 margin-bottom: 25px;
 }
-
+.line{
+  background: url('../img/JA-line1.png') cover no-repeat;
+  width: 100%;
+}
 /* ==========================================================================
    Header
    ========================================================================== */
