--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -262,6 +262,7 @@ margin-top: 25px;
 .line{
   background: url('../img/JA-line1.png') cover no-repeat;
   width: 100%;
+  padding-bottom: 10%;
 }
 /* ==========================================================================
    Header
