--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -260,7 +260,7 @@ p.pause:before{
 margin-top: 25px;
 }
 .line{
-  background: url('../img/JA-line1.png') cover no-repeat;
+  background: url(../img/JA-line1.png) cover no-repeat;
   width: 100%;
   padding-bottom: 10%;
 }
