--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -260,10 +260,11 @@ p.pause:before{
 margin-top: 25px;
 }
 .line{
-  background: url(../img/JA_V04-BarLong.png) no-repeat;
-  width: 100%;
-  padding-bottom: 10%;
-}
+background: url(../img/JA_V04-BarLong.png) no-repeat;
+width: 100%;
+padding-bottom: 5%;
+background-size: contain;
+margin: 0 1%;}
 /* ==========================================================================
    Header
    ========================================================================== */
