About page template

--- a/templates/views.html
+++ b/templates/views.html
@@ -216,3 +216,26 @@
 		[wpml-string context="wpv-views"]<strong>No items found</strong>[/wpml-string]
 	[/wpv-no-items-found]
 [wpv-layout-end]
+
+<!--About Page-->
+[wpv-layout-start]
+	[wpv-items-found]
+	<!-- wpv-loop-start -->
+	<div class="row">
+		<wpv-loop>
+		<div class="col-sm-6 blog-img-container">
+		<img src=""/>
+		</div>
+			<div class="row">
+				<div class="col-sm-12">
+				<p>BODY</p>
+				</div>
+			</div>
+		</wpv-loop>
+		</div>
+	<!-- wpv-loop-end -->
+	[/wpv-items-found]
+	[wpv-no-items-found]
+		[wpml-string context="wpv-views"]<strong>No items found</strong>[/wpml-string]
+	[/wpv-no-items-found]
+[wpv-layout-end]
