about page margins

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -271,8 +271,13 @@ margin: 0 1%;}
 
 .banner { }
 
+/* ==========================================================================
+   About
+   ========================================================================== */
 
-
+.about-page .blog-img-container {
+margin-bottom: 30px;
+}
 /* ==========================================================================
    Content
    ========================================================================== */
