body.media overflow scroll

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -512,6 +512,14 @@ display: none;
 }
 
 /* ==========================================================================
+   Media
+   ========================================================================== */
+body.media{
+  overflow: scroll!important;
+}
+
+
+/* ==========================================================================
    Posts
    ========================================================================== */
 
