--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -518,6 +518,83 @@ body.media{
   overflow: scroll!important;
 }
 
+.vid-gal-title{
+   margin-left: 13%;
+}
+
+.gallery-box {margin-top:0px;}
+
+#gallery-carousel .owl-item{
+   border: 1px solid #FFF;
+}
+
+.gal-title-box {
+background: rgba(255,255,255,.5);
+margin: 45px 0px 0px 0px;
+border: 1px solid #ededed;
+}
+
+.gal-title-box h2 a {
+font-weight: 100;
+text-transform: uppercase;
+width: 100%;
+display: block;
+line-height: 26px;
+}
+
+.gal-title-box>h2{
+text-align: left;
+margin: 10px 0px!important;
+}
+
+.gal-title-box h2 i {
+float: left;
+margin-right: 15px; 
+}
+
+.gal-title-box .videos-button {
+float:right;
+margin:15px;
+padding: 6px;
+}
+
+.gal-title-box:hover {
+background: rgba(255,255,255,1.0);
+}
+
+.gal-thumb {
+border: 1px solid #ededed;
+padding: 0px 0px 56% 0px;
+background-position: 50% 0px!important;
+}
+
+.video-page-h1 h1 {
+color: #70bcbf;
+text-transform: uppercase;
+font-size:40px;
+font-weight: 100;
+text-align: center;
+background:rgba(250,250,250,.9);
+padding: 1%;
+}
+
+.vid-title {
+background: #fff;
+border: 1px solid #ededed;
+border-top: 0px;
+height: 0px;
+padding-bottom: 50%;
+overflow: hidden;
+}
+
+.gal-thumb:hover {
+opacity: .8;
+}
+
+article .video > header{
+display: none;
+}
+
 
 /* ==========================================================================
    Posts
