--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -641,7 +641,7 @@ background-size: cover;
  -moz-column-count: 1;
  -webkit-column-count: 1;
  }
- .single-video header{
+ .single-video .header-page{
   /* Cheap CSS Fix */
   display: none!important;
  }
