--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -278,6 +278,11 @@ margin: 0 1%;}
 .about-page .blog-img-container {
 margin-bottom: 30px;
 }
+.about p {
+word-spacing: 2px;
+line-height: 1.5;
+}
+
 /* ==========================================================================
    Content
    ========================================================================== */
