--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -288,7 +288,9 @@ line-height: 1.5;
 -webkit-column-count: 2;
 -webkit-column-gap : 50px;
 }
-
+.about-img {
+margin-bottom: 15px;
+}
 /* ==========================================================================
    Content
    ========================================================================== */
