--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -608,7 +608,10 @@ article .video > header{
 display: none;
 }
 
-
+.gal-title {
+display: inline-block;
+margin-right: 25px;
+}
 /* ==========================================================================
    Posts
    ========================================================================== */
