--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -319,8 +319,8 @@ margin-bottom: 15px;
 }
 
 
-.sm2_link>.fa:before, .sm2_paused>.fa:before {
-content: "\f144";
+.sm2_link>.fa :before, .sm2_paused>.fa:before {
+content: "\f04b";
 }
 .sm2_playing>.fa:before{
   content: "\f04c";
